# my-finace-bot-study

./: .gitignore  PENDENTE.md  README.md  SECURITY.md
backend/: .env.example  pyproject.toml
backend/agent/: bot.py  history.py  prompts.py  test_groq_agent.py  tools.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: group.py  limit.py  transaction.py
backend/app/routers/: auth_link.py  groups.py  limits.py  summary.py  transactions.py
backend/supabase/migrations/: 001_initial_schema.sql  002_bot_auth.sql  003_grant_anon_permissions.sql  004_fix_group_members_recursion.sql  005_fix_group_members_owner_recursion.sql  006_telegram_link_codes.sql  007_grant_anon_group_members_transactions.sql  008_grant_anon_users_delete.sql  009_grant_anon_users_update.sql  010_grant_anon_invites_groups_select.sql
backend/tests/: conftest.py  test_agent_history.py  test_agent_tools.py  test_auth.py  test_auth_link.py  test_groups.py  test_limits.py  test_models.py  test_summary.py  test_telegram_handlers.py  test_transactions.py
backend/tgbot/: alerts.py  handlers.py  runner.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: balance-card.tsx  category-bar.tsx  create-group-form.tsx  invite-form.tsx  logout-button.tsx  telegram-link-code.tsx  telegram-link.tsx  transaction-table.tsx
frontend/src/lib/: api.ts  (+1 more)
specs/: 2026-06-25-design.md  2026-06-25-plan-1-backend.md  2026-06-25-plan-2-bot.md  2026-06-25-plan-3-frontend.md
(+8 files in other folders)
